--- a/blockly_server/static/css/header-style.css
+++ b/blockly_server/static/css/header-style.css
@@ -11,7 +11,7 @@ header {
   box-sizing: border-box;
   width: 100%;
   max-height: 90px;
-  
+  height: 100px;
   background-size: cover;
   background-attachment: fixed;
   position: relative;
@@ -21,6 +21,7 @@ header {
 
 .header-wrap {
   height: 100%;
+
   display: flex;
   align-items: center;
   padding: 20px;
