not black ui error on editors

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -78,3 +78,15 @@ button:focus-visible {
   color: red;
   font-weight: bold;
 }
+
+#simulatorIframe{
+  min-height: 370px;
+}
+
+.darkbg{
+  background-color: #2a3447;
+}
+
+.lightbg{
+  background: #fff;
+}
