--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -79,14 +79,20 @@ button:focus-visible {
   font-weight: bold;
 }
 
-#simulatorIframe{
+#simulatorIframe {
   min-height: 370px;
 }
 
-.darkbg{
+.darkbg {
   background-color: #2a3447;
 }
 
-.lightbg{
+.lightbg {
   background: #fff;
+}
+
+@media screen and (max-width: 1024px) {
+  .monacoEditorComponent {
+    min-height: 50vh;
+  }
 }
