Interactive page responsive

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -101,4 +101,7 @@ button:focus-visible {
   .blocklyDiv {
     min-height: 62vh;
   }
+  #videocomponent video, #videocomponent canvas{
+    width: 100%;
+  }
 }
